--- a/dos33.html
+++ b/dos33.html
@@ -1059,7 +1059,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1EA8:8D 52 2A       025             STA OSTATE      ; STATE TO INPUT ECHO
                     026             JSR LDREGS
                     027             JSR GETIN
-                    028             STA SVA         ; SAVE CHAR &apm; INDEX
+                    028             STA SVA         ; SAVE CHAR &amp; INDEX
                     029             STX SVX
                     030             JMP ORTN
                     031 ;
