Add image for color memory source files

--- a/dos33.html
+++ b/dos33.html
@@ -7263,6 +7263,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
  <span class="c44" href="#DOSPTCH">DOSPTCH</span> ; $3FC8 .. $3FFF, T0S9
 </pre>
 
+<img src="color_memory_usage_filename.png">
 
 <pre>
 1B00:<span class="c00">4C 84 1D A9 BF 85 41 A2</span> |L..)?.A"| RELOCTR, $1B00 .. $1CFF, T0SA - T0SB
