--- a/dos33.html
+++ b/dos33.html
@@ -500,9 +500,9 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     107 <a class="f" name="DR0"     >DR0         </a>EQU *
                     108 <a class="d" name="LOC1"    >LOC1        </a>EQU $26                                         ; Monitor ROM GBASL = $26
 1B03:A9 BF          109             LDA #$<span class='n'>BF</span>        ; START AT BF00                 ; Top of 48K
-1B05:85 41          110             STA <a class="v" href="#ZPGWRK" >ZPGWRK</a>+1    ; TO LOOK FOR                   ; ZPGWRK = MemTestAdr
+1B05:85 41          110             STA <a class='v' href='#ZPGWRK'>ZPGWRK</a>+1    ; TO LOOK FOR                   ; ZPGWRK = MemTestAdr
 1B07:A2 00          111             LDX #<span class='n'>0</span>          ; HIGH RAM
-1B09:86 40          112             STX ZPGWRK
+1B09:86 40          112             STX <a class='v' href='#ZPGWRK'>ZPGWRK</a>
 1B0B:A0 00          113 <a class="f" name="DR0A"    >DR0A        </a>LDY #<span class='n'>0</span>          ; APPLE TEST
                     114 <a class="f" name="DR1B"    >DR1B        </a>EQU *                                           ; unused label
 1B0D:A1 40          115             LDA (<a class="v" href="#ZPGWRK" >ZPGWRK</a>,X)
@@ -568,39 +568,39 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     175 ;RELOCATE ADR TABLES
                     176 ;
 <hr>1B76:A2 00          177             LDX #<span class='n'>0</span>                                          ; === Page <a class="page" name="page113">113</a> ===
-1B78:86 40          178             STX ZPGWRK
+1B78:86 40          178             STX <a class='v' href='#ZPGWRK'>ZPGWRK</a>
                     179 <a class="f" name="DR3"         >DR3         </a>EQU *
-1B7A:BD 29 1C       180             LDA ADRTAB+1,X                                  ; [StartLo] If only we had an ($BC) LDY ADRTAB+1,X instruction ...
+1B7A:BD 29 1C       180             LDA <a class='v' href='#ADRTAB'>ADRTAB</a>+1,X                                  ; [StartLo] If only we had an ($BC) LDY ADRTAB+1,X instruction ...
 1B7D:A8             <a class='line' name='RELOCTR.181'>181</a>             TAY                                             ; <a class='mem' name='_1B7D'>wastes</a> 1 byte; ... to skip this useless instruction.
-1B7E:BD 2A 1C       182             LDA ADRTAB+2,X                                  ; [StartHi]      Oh wait, we do! /rhetorical Who knew!
-1B81:85 41          183             STA ZPGWRK+1                                    ;                Evident code quality to come. :-/
+1B7E:BD 2A 1C       182             LDA <a class='v' href='#ADRTAB'>ADRTAB</a>+2,X                                  ; [StartHi]      Oh wait, we do! /rhetorical Who knew!
+1B81:85 41          183             STA <a class='v' href='#ZPGWRK'>ZPGWRK</a>+1                                    ;                Evident code quality to come. :-/
 1B83:4C 93 1B       <a class='line' name='RELOCTR.184'>184</a>             JMP DR5                                         ; <a class='mem' name='_1B83'>wastes</a> 1 byte instead of BNE; skip low address ptr
                     185 ;                                                           ; See software was bloated in the "good ol' days" too. :-(
                     186 <a class="f" name="DR4"         >DR4         </a>EQU *
 1B86:18             187             CLC
-1B87:B1 40          188             LDA (ZPGWRK),Y
+1B87:B1 40          188             LDA (<a class='v' href='#ZPGWRK'>ZPGWRK</a>),Y
 1B89:6D 7F 1C       189             ADC DELTA
-1B8C:91 40          190             STA (ZPGWRK),Y
+1B8C:91 40          190             STA (<a class='v' href='#ZPGWRK'>ZPGWRK</a>),Y
 1B8E:C8             191             INY                                             ; Line #<a class='line' href='#RELOCTR.203'>203</a>
 1B8F:D) 02          192             BNE DR5
-1B91:E6 41          193             INC ZPGWRK+1
+1B91:E6 41          193             INC <a class='v' href='#ZPGWRK'>ZPGWRK</a>+1
 1B93:C8             194 <a class="f" name="DR5"         >DR5         </a>INY
 1B94:D0 02          195             BNE DR6
-1B96:E6 41          196             INC ZPGWRK+1
+1B96:E6 41          196             INC <a class='v' href='#ZPGWRK'>ZPGWRK</a>+1
                     197 ;
                     198 <a class="f" name="DR6"         >DR6         </a>EQU *
-1B98:A5 41          199             LDA ZPGWRK+1
-1B9A:DD 2C 1C       200             CMP ADRTAB+4,X                                  ; [EndHi] Crappy array offset, see comments starting on Line #<a class='line' href='#RELOCTR.286'>286</a>
+1B98:A5 41          199             LDA <a class='v' href='#ZPGWRK'>ZPGWRK</a>+1
+1B9A:DD 2C 1C       200             CMP <a class='v' href='#ADRTAB'>ADRTAB</a>+4,X                                  ; [EndHi] Crappy array offset, see comments starting on Line #<a class='line' href='#RELOCTR.286'>286</a>
 1B9D:90 E7          201             BCC DR4
 1B9F:98             202             TYA
-1BA0:DD 2B 1C       <a class='line' name='RELOCTR.203'>203</a>             CMP ADRTAB+3,X                                  ; [EndLo]
+1BA0:DD 2B 1C       <a class='line' name='RELOCTR.203'>203</a>             CMP <a class='v' href='#ADRTAB'>ADRTAB</a>+3,X                                  ; [EndLo]
 1BA3:90 E1          204             BCC DR4
                     205 ;
 1BA5:8A             206             TXA
 1BA6:18             207             CLC
 1BA7:69 04          208             ADC #4                                          ; 4 bytes per entry: {StartAdr,EndAdr}
 1BA9:AA             209             TAX
-1BAA:EC 28 1C       210             CPX ADRTAB                                      ; Done all bytes?
+1BAA:EC 28 1C       210             CPX <a class='v' href='#ADRTAB'>ADRTAB</a>                                      ; Done all bytes?
 1BAD:90 CB          211             BCC DR3
                     212             PAGE
                     213 ;
