--- a/dos33.html
+++ b/dos33.html
@@ -574,34 +574,34 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1B7D:A8             <a class='line' name='RELOCTR.181'>181</a>             TAY                                             ; <a class='mem' name='_1B7D'>wastes</a> 1 byte; ... to skip this useless instruction.
 1B7E:BD 2A 1C       182             LDA <a class='v' href='#ADRTAB'>ADRTAB</a>+2,X                                  ; [StartHi]      Oh wait, we do! /rhetorical Who knew!
 1B81:85 41          183             STA <a class='v' href='#ZPGWRK'>ZPGWRK</a>+1                                    ;                Evident code quality to come. :-/
-1B83:4C 93 1B       <a class='line' name='RELOCTR.184'>184</a>             JMP DR5                                         ; <a class='mem' name='_1B83'>wastes</a> 1 byte instead of BNE; skip low address ptr
+1B83:4C 93 1B       <a class='line' name='RELOCTR.184'>184</a>             JMP <a class='x' href='#DR5'>DR5</a>                                         ; <a class='mem' name='_1B83'>wastes</a> 1 byte instead of BNE; skip low address ptr
                     185 ;                                                           ; See software was bloated in the "good ol' days" too. :-(
                     186 <a class="f" name="DR4"         >DR4         </a>EQU *
 1B86:18             187             CLC
 1B87:B1 40          188             LDA (<a class='v' href='#ZPGWRK'>ZPGWRK</a>),Y
-1B89:6D 7F 1C       189             ADC DELTA
+1B89:6D 7F 1C       189             ADC <a class='v' href='#DELTA'>DELTA</a>
 1B8C:91 40          190             STA (<a class='v' href='#ZPGWRK'>ZPGWRK</a>),Y
 1B8E:C8             191             INY                                             ; Line #<a class='line' href='#RELOCTR.203'>203</a>
-1B8F:D) 02          192             BNE DR5
+1B8F:D) 02          192             BNE <a class='x' href='#DR5'>DR5</a>
 1B91:E6 41          193             INC <a class='v' href='#ZPGWRK'>ZPGWRK</a>+1
 1B93:C8             194 <a class="f" name="DR5"         >DR5         </a>INY
-1B94:D0 02          195             BNE DR6
+1B94:D0 02          195             BNE <a class='x' href='#DR6'>DR6</a>
 1B96:E6 41          196             INC <a class='v' href='#ZPGWRK'>ZPGWRK</a>+1
                     197 ;
                     198 <a class="f" name="DR6"         >DR6         </a>EQU *
 1B98:A5 41          199             LDA <a class='v' href='#ZPGWRK'>ZPGWRK</a>+1
 1B9A:DD 2C 1C       200             CMP <a class='v' href='#ADRTAB'>ADRTAB</a>+4,X                                  ; [EndHi] Crappy array offset, see comments starting on Line #<a class='line' href='#RELOCTR.286'>286</a>
-1B9D:90 E7          201             BCC DR4
+1B9D:90 E7          201             BCC <a class='x' href='#DR4'>DR4</a>
 1B9F:98             202             TYA
 1BA0:DD 2B 1C       <a class='line' name='RELOCTR.203'>203</a>             CMP <a class='v' href='#ADRTAB'>ADRTAB</a>+3,X                                  ; [EndLo]
-1BA3:90 E1          204             BCC DR4
+1BA3:90 E1          204             BCC <a class='x' href='#DR4'>DR4</a>
                     205 ;
 1BA5:8A             206             TXA
 1BA6:18             207             CLC
-1BA7:69 04          208             ADC #4                                          ; 4 bytes per entry: {StartAdr,EndAdr}
+1BA7:69 04          208             ADC #<span class='n'>4</span>                                          ; 4 bytes per entry: {StartAdr,EndAdr}
 1BA9:AA             209             TAX
 1BAA:EC 28 1C       210             CPX <a class='v' href='#ADRTAB'>ADRTAB</a>                                      ; Done all bytes?
-1BAD:90 CB          211             BCC DR3
+1BAD:90 CB          211             BCC <a class='x' href='#DR3'>DR3</a>
                     212             PAGE
                     213 ;
                     214 ;RELOCATE CODE
