--- a/dos33.html
+++ b/dos33.html
@@ -615,10 +615,10 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1BBC:85 41          222             STA <a class="v" href="#ZPGWRK">ZPGWRK</a>+1
                     223 ;
 1BBE:A2 00          224 <a class="f" name="DR8"         >DR8         </a>LDX #<span class='n'>0</span>         ; GET OP CODE
-1BC0:A1 40          225             LDA (<a class="v" href="#ZPGWRK">ZPGWRK</a>,X)  ; GO FIND OUT HOW LONG          ; Interesting hack of using
+1BC0:A1 40          225             LDA (<a class="v" href="#ZPGWRK">ZPGWRK</a>,X)  ; GO FIND OUT HOW LONG          ; Since we don't have a linker, interesting hack of using
 1BC2:20 8E F8       226             JSR <a class="x" href="#INSDS2">INSDS2</a>                                      ; monitor ROM to get instruction opcode length
                     227 ;
-1BC5:A4 2F          228             LDY <a  class="v" href="#LENGTH">LENGTH</a>      ; GET HOW LONG
+1BC5:A4 2F          228             LDY <a  class="v" href="#LENGTH">LENGTH</a>      ; GET HOW LONG                  ; crappy var name -- length of what?? Oh OPCODE_LEN
 1BC7:C0 02          229             CPY #<span class='n'>2</span>          ; IF IT AIN'T                   ; *sigh* #3-1 is clearer since zero based
 1BC9:D0 11          230             BNE <a  class="x" href="#DR9"   >DR9</a>         ; 3 THEN DON'T RELOC            ; 300:A9 20 20 8E F8 A5 2F 09 30 4C ED FD
 1BCB:B1 40          231             LDA (<a class="v" href="#ZPGWRK">ZPGWRK</a>),Y  ; GET PAGE FROM INST
